--- a/노태엽_TIL/pytorch_RL/pytorch_DQN.ipynb
+++ b/노태엽_TIL/pytorch_RL/pytorch_DQN.ipynb
@@ -1,6 +1,15 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Pytorch Deep Q Learning (DQN) Tutorial\n",
+    "- Task\n",
+    ":    Cartpole"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 14,
    "metadata": {},
@@ -85,6 +94,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Replay Memory\n",
+    "\n",
+    "Replay Memory는 Agent가 관찰한 transition을 저장한 뒤, 나중에 재사용할 수 있도록 만든 곳이다.\n",
+    "\n",
+    "Replay Memory에 저장한 여러 transition을 나중에 random으로 뽑아, 배치 단위로 학습을 진행하게 된다.\n",
+    "\n",
+    "- transition : (state, action, next_state, reward) -> `named tuple`\n",
+    "- ReplayMemory : 가장 최근 관찰한 transition을 저장(push)하고 random으로 뽑는(sample)역할을 하는 클래스이다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
@@ -111,6 +134,71 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### DQN algorithm\n",
+    "\n",
+    "본 실습에서 사용하는 environment는 deterministic하다. (simplicity를 위해)\n",
+    "\n",
+    "본 알고리즘의 목표는 **discounted, cumulative reward**를 최대화하도록 policy를 학습시키는 것이다.\n",
+    "\n",
+    "Q-learning의 핵심은 아래의 수식들이다.\n",
+    "\n",
+    "*(여기서 * 표시가 붙은 값들은 이상적인 값을 나타낸다)*\n",
+    "$$Q^* : State * Action \\rightarrow R \\tag{1}$$ \n",
+    "\n",
+    "(1) : Reward는 State와 Action의 곱으로 표현\n",
+    "\n",
+    "$$\\pi^*(s) = \\argmax_a Q^*(s,a) \\tag{2}$$\n",
+    "\n",
+    "(2) : 최적의 정책 $\\pi^*(s)$는 $Q^*(s,a)$를 최대화하는 action\n",
+    "\n",
+    "하지만 현재로썬 최적의 정책을 모르므로, 임의의 Q를 만들고 최적의 정책이 될 수 있도록 학습시킨다. \n",
+    "\n",
+    "학습 시에는 Q함수가 Bellman equation을 따른다는 사실을 이용할 것이다.\n",
+    "\n",
+    "$$Q^{\\pi}(s,a) = r + \\gamma Q^{\\pi}(s',\\pi(s'))$$\n",
+    "\n",
+    "temporal difference($\\delta$)를 다음과 같이 정의하고 이를 이용해 학습에 사용될 오차(error)를 정의한다.\n",
+    "\n",
+    "$$\\delta = Q(s,a) - (r + \\gamma \\max_a' Q(s',a))$$\n",
+    "\n",
+    "error를 최소화하기 위해, Huber loss를 이용할 것이다. \n",
+    "\n",
+    "Huber loss는 error의 절대값이 1보다 작거나 같을 경우에는 mean squared error가 되고, 아닐 경우에는 mean absolute error가 된다. \n",
+    "\n",
+    "이를 통해 Q 함수가 outlier가 많을 때에도 robustness를 가질 수 있다.\n",
+    "\n",
+    "replay memeory로부터 뽑은 transition의 sample들로 구성된 배치 단위(B)로 학습이 진행된다.\n",
+    "\n",
+    "$$\\mathcal{L} = {1 \\over |B|} \\Sigma_{(s,a,s',r) \\in B} \\mathcal{L}(\\delta)$$\n",
+    "\n",
+    "$$\n",
+    "\\begin{equation}\n",
+    "\\mathcal{L}(\\delta) =\n",
+    "\\begin{cases}\n",
+    "\\frac{1}{2} \\delta^2 & \\text{for } |\\delta| \\leq 1 \\\\\n",
+    "|\\delta - \\frac{1}{2}| & \\text{otherwise}\n",
+    "\\end{cases}\n",
+    "\\end{equation}\n",
+    "$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Q-network\n",
+    "\n",
+    "간단한 feed forward network를 이용할 것이다.\n",
+    "\n",
+    "Cartpole에서 output은 두 가지인데, **Q(s, left) 또는 Q(s, right)** 이다.\n",
+    "\n",
+    "즉 network는 주어진 input에 대해 *expected return* 을 예측하도록 학습될 것이다."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -124,12 +212,22 @@
     "        self.layer2 = nn.Linear(128, 128)\n",
     "        self.layer3 = nn.Linear(128, n_actions)\n",
     "\n",
-    "    # Called with either one element to determine next action, or a batch\n",
-    "    # during optimization. Returns tensor([[left0exp,right0exp]...]).\n",
     "    def forward(self, x):\n",
     "        x = F.relu(self.layer1(x))\n",
     "        x = F.relu(self.layer2(x))\n",
     "        return self.layer3(x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Training\n",
+    "#### Hyperparameters and utilities\n",
+    "\n",
+    "- select_action : epsilon greedy policy를 통해 어떤 action을 할 지 선택하는 함수\n",
+    "\n",
+    "- plot-duration : 학습의 결과를 보기에 용이하게 plot하는 함수\n"
    ]
   },
   {
@@ -138,25 +236,18 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# BATCH_SIZE is the number of transitions sampled from the replay buffer\n",
-    "# GAMMA is the discount factor as mentioned in the previous section\n",
-    "# EPS_START is the starting value of epsilon\n",
-    "# EPS_END is the final value of epsilon\n",
-    "# EPS_DECAY controls the rate of exponential decay of epsilon, higher means a slower decay\n",
-    "# TAU is the update rate of the target network\n",
-    "# LR is the learning rate of the ``AdamW`` optimizer\n",
-    "BATCH_SIZE = 128\n",
-    "GAMMA = 0.99\n",
-    "EPS_START = 0.9\n",
-    "EPS_END = 0.05\n",
-    "EPS_DECAY = 1000\n",
-    "TAU = 0.005\n",
-    "LR = 1e-4\n",
+    "BATCH_SIZE = 128 # 배치 사이즈 : Replay Memory로부터 sample로 뽑을 transition의 수\n",
+    "GAMMA = 0.99 # 감마 : 감소율\n",
+    "EPS_START = 0.9 : # 입실론의 시작 값\n",
+    "EPS_END = 0.05 # 입실론의 끝 값\n",
+    "EPS_DECAY = 1000 # 입실론의 감소하는 속도\n",
+    "TAU = 0.005 # 타겟 네트워크 업데이트 비율\n",
+    "LR = 1e-4 # 학습률\n",
     "\n",
-    "# Get number of actions from gym action space\n",
-    "n_actions = env.action_space.n\n",
-    "# Get the number of state observations\n",
-    "state, info = env.reset()\n",
+    "n_actions = env.action_space.n # gym의 env로부터 액션의 개수 받기 (cartpole에서 2)\n",
+    "\n",
+    "state, info = env.reset() # gym의 env로부터 관찰한 값을 받기 (본 코드에서는 state만 이용)\n",
+    "# state에는 Cart Position / Cart Velocity / Pole Angle / Pole Velocity 정보를 담고 있음\n",
     "n_observations = len(state)\n",
     "\n",
     "policy_net = DQN(n_observations, n_actions).to(device)\n",
@@ -178,9 +269,8 @@
     "    steps_done += 1\n",
     "    if sample > eps_threshold:\n",
     "        with torch.no_grad():\n",
-    "            # t.max(1) will return the largest column value of each row.\n",
-    "            # second column on max result is index of where max element was\n",
-    "            # found, so we pick action with the larger expected reward.\n",
+    "            # policy_net(state) 를 통해 DQN의 foward 호출\n",
+    "            # (batch_size, 2) -> (1) -> (1,1)\n",
     "            return policy_net(state).max(1)[1].view(1, 1)\n",
     "    else:\n",
     "        return torch.tensor([[env.action_space.sample()]], device=device, dtype=torch.long)\n",
@@ -200,13 +290,13 @@
     "    plt.xlabel('Episode')\n",
     "    plt.ylabel('Duration')\n",
     "    plt.plot(durations_t.numpy())\n",
-    "    # Take 100 episode averages and plot them too\n",
+    "    # 100개의 episode를 가져와 평균을 내 plot하기\n",
     "    if len(durations_t) >= 100:\n",
     "        means = durations_t.unfold(0, 100, 1).mean(1).view(-1)\n",
     "        means = torch.cat((torch.zeros(99), means))\n",
     "        plt.plot(means.numpy())\n",
     "\n",
-    "    plt.pause(0.001)  # pause a bit so that plots are updated\n",
+    "    plt.pause(0.001)  # plot이 update될 수 있는 시간 주기\n",
     "    if is_ipython:\n",
     "        if not show_result:\n",
     "            display.display(plt.gcf())\n",
@@ -217,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -225,15 +315,14 @@
     "    if len(memory) < BATCH_SIZE:\n",
     "        return\n",
     "    transitions = memory.sample(BATCH_SIZE)\n",
-    "    # Transpose the batch (see https://stackoverflow.com/a/19343/3343043 for\n",
-    "    # detailed explanation). This converts batch-array of Transitions\n",
-    "    # to Transition of batch-arrays.\n",
-    "    batch = Transition(*zip(*transitions))\n",
+    "    batch = Transition(*zip(*transitions)) # state는 state끼리, action은 action끼리, next_state는 next_state끼리, reward는 reward끼리 묶는 코드\n",
+    "    # https://stackoverflow.com/a/19343/3343043\n",
     "\n",
-    "    # Compute a mask of non-final states and concatenate the batch elements\n",
-    "    # (a final state would've been the one after which simulation ended)\n",
     "    non_final_mask = torch.tensor(tuple(map(lambda s: s is not None,\n",
     "                                          batch.next_state)), device=device, dtype=torch.bool)\n",
+    "    # 학습에 사용할 샘플링된 배치 데이터 중 state가 맨 마지막 state인지 아니면 다음 state가 있는지 알 수 있는 표시 하는 코드\n",
+    "    # batch는 `named tuple`\n",
+    "    \n",
     "    non_final_next_states = torch.cat([s for s in batch.next_state\n",
     "                                                if s is not None])\n",
     "    state_batch = torch.cat(batch.state)\n",
@@ -243,6 +332,8 @@
     "    # Compute Q(s_t, a) - the model computes Q(s_t), then we select the\n",
     "    # columns of actions taken. These are the actions which would've been taken\n",
     "    # for each batch state according to policy_net\n",
+    "    \n",
+    "    # INPUT.gather(DIM, INDEX)\n",
     "    state_action_values = policy_net(state_batch).gather(1, action_batch)\n",
     "\n",
     "    # Compute V(s_{t+1}) for all next states.\n",
